--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Creative One Page Parallax Template">
 	<meta name="keywords" content="Creative, Onepage, Parallax, HTML5, Bootstrap, Popular, custom, personal, portfolio" /> 
 	<meta name="author" content=""> 
-	<title>Muser</title> 
+	<title>Zeferino</title> 
 	<link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 	<link href="css/prettyPhoto.css" rel="stylesheet"> 
 	<link href="css/font-awesome.min.css" rel="stylesheet"> 
@@ -42,12 +42,12 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
 						<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 					</button> 
-					<a class="navbar-brand" href="index.html"><h1><strong>Juken</strong></h1></a> 
+					<a class="navbar-brand" href="index.html"><h1><strong>Zeferino</strong></h1></a> 
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
 						<li class="scroll active"><a href="#navigation">Home</a></li> 
-						<li class="scroll"><a href="#about-us">What is Juker?</a></li> 
+						<li class="scroll"><a href="#about-us">About Me</a></li> 
 						<li class="scroll"><a href="#services">Services</a></li> 
 					</ul> 
 				</div> 
@@ -101,8 +101,8 @@
 	<div class="container">
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
-				<h2 class="title-one">Juker</h2>
-				<p>Juker is an application that lets you listen to music from spotify! Demo it here!</p>
+				<h2 class="title-one">About Me</h2>
+				<p>Hello, my name is Zeferino Magadan. I specialize in teaching students in the ways of driving; I have over 6 years of experience. </p>
 			</div>
 		</div>
 		<div class="about-us">
@@ -117,8 +117,8 @@
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
 					<h2 class="title-one">Service</h2>
-					<p>Listen to your favorite music online!</p>
-				</div>
+					<p>I provide an exclusive service to those willing to learn the basics of driving, I charge 80 dollars an ho</p>
+				</div>ur
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
@@ -127,7 +127,7 @@
 							<div class="col-sm-4">
 								<div class="single-service">
 									<i class="fa fa-music"></i>
-									<h2>Listen to your tunes!</h2>
+									<h2>Filler Text xd</h2>
 									<p>Music is good for the soul</p>
 								</div>
 							</div>
