fixed several site bugs

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 	<link href="css/animate.css" rel="stylesheet"> 
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/responsive.css" rel="stylesheet"> 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<!--[if lt IE 9]> <script src="js/html5shiv.js"></script> 
 	<script src="js/respond.min.js"></script> <![endif]--> 
 	<link rel="shortcut icon" href="images/ico/favicon.png"> 
@@ -102,7 +103,7 @@
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
 				<h2 class="title-one">About Me</h2>
-				<p>Hello, my name is Zeferino Magadan. I specialize in teaching students in the ways of driving; I have over 6 years of experience. </p>
+				<p>Hello, my name is Zeferino I am a driving instructor; I have over 6 years of experience and specialize in teaching students how to drive. No matter the age I believe everyone has an equal chance at succeeding; and with my expertise expect to pass the exam on the first try!</p>
 			</div>
 		</div>
 		<div class="about-us">
@@ -116,9 +117,9 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
-					<h2 class="title-one">Service</h2>
-					<p>I provide an exclusive service to those willing to learn the basics of driving, I charge 80 dollars an ho</p>
-				</div>ur
+					<h2 class="title-one">Services</h2>
+					<p></p>
+				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
@@ -126,23 +127,23 @@
 						<div class="services row">
 							<div class="col-sm-4">
 								<div class="single-service">
-									<i class="fa fa-music"></i>
-									<h2>Filler Text xd</h2>
-									<p>Music is good for the soul</p>
+									<i class="fa fa-car"></i>
+									<h2>Exam Vehicle</h2>
+									<p>I offer a vehicle for the dmv examination delivered to you on the date of your appointment.</p>
 								</div>
 							</div>
 							<div class="col-sm-4">
 								<div class="single-service">
-									<i class="fa fa-facebook"></i>
-									<h2>Facebook</h2>
-									<p>Login using your facebook credentials!</p>
+									<i class="fa fa-flag-o"></i>
+									<h2>Bilingual</h2>
+									<p>I speak both english and spanish to a proficient degree.</p>
 								</div>
 							</div>
 							<div class="col-sm-4">
 								<div class="single-service">
-									<i class="fa fa-github"></i>
-									<h2>Github</h2>
-									<p>github.com/neardanger</p>
+									<i class="fa fa-check"></i>
+									<h2>Step by step</h2>
+									<p>The correct procedures are gone over to insure the student's success.</p>
 								</div>
 							</div></div>
 						</div>
