--- a/public/index.html
+++ b/public/index.html
@@ -68,25 +68,23 @@
 				<div class="item active" style="background-image: url(images/slider/slide3.jpg)"> 
 					<div class="carousel-caption"> 
 						<div> 
-							<h2 class="heading animated bounceInDown">'RatShoes'</h2> 
-							<p class="animated bounceInUp">An alternate music player using spotify API</p> 
-							<a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a> 
+							<h2 class="heading animated bounceInDown">'Zeferino'</h2> 
+							<p class="animated bounceInUp">A different way at apporaching success</p> 
 						</div> 
 					</div> 
 				</div>
 				<div class="item" style="background-image: url(images/slider/slide2.jpg)"> 
 					<div class="carousel-caption"> <div> 
-						<h2 class="heading animated bounceInDown">Save songs to your playlist</h2> 
-						<p class="animated bounceInUp">Save your favorite songs with your own personalized playlist</p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a> 
+						<h2 class="heading animated bounceInDown">Announcements</h2> 
+						<p class="animated bounceInUp">Ditto</p>  
 					</div> 
 				</div> 
 			</div> 
 			<div class="item" style="background-image: url(images/slider/slide1.jpg)"> 
 				<div class="carousel-caption"> 
 					<div> 
-						<h2 class="heading animated bounceInRight">I guess this is a filler hehe xd</h2> 
+						<h2 class="heading animated bounceInRight">Nothing Yet</h2> 
 						<p class="animated bounceInLeft"></p> 
-						<a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a> 
 					</div> 
 				</div> 
 			</div>
