added contact section

--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,53 @@
 				</div>
 			</div>
 		</section><!--/#service-->
+		
+		<section id="contact">
+							<div class="container">
+								<div class="row text-center clearfix">
+									<div class="col-sm-8 col-sm-offset-2">
+										<div class="contact-heading">
+											<h2 class="title-one">Contact Me</h2>
+											<p>For any of my services feel free to get in touch with me</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="container">
+								<div class="contact-details">
+									<div class="pattern"></div>
+									<div class="row text-center clearfix">
+										<div class="col-sm-6">
+											<div class="contact-address"><address><p><span>Zeferino </span>Magadan</p><strong>310-500-5350<br><br>Driving Instructor</strong><br><small></small></address>
+												<div class="social-icons">
+													<a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a>
+													<a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
+													<a href="#"><i class="fa fa-linkedin"></i></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="col-sm-6"> 
+											<div id="contact-form-section">
+												<form action="https://formspree.io/jayhardway9@gmail.com" method="POST">
+													<div class="form-group">
+														<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name"></div>
+														<div class="form-group">
+															<input type="email" name="_replyto" class="form-control mail-field" required="required" placeholder="Your Email">
+														</div> 
+														<div class="form-group">
+															<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>
+														</div> 
+														<div class="form-group">
+															<input type="submit" class="btn btn-primary"></button>
+														</div>
+													</form> 
+												</div>
+											</div>
+										</div>
+									</div>
+								</div> 
+							</section> <!--/#contact--> 
 					
 
 	<script type="text/javascript" src="js/jquery.js"></script> 
