added contact form, works now.

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-	<meta name="description" content="Creative One Page Parallax Template">
-	<meta name="keywords" content="Creative, Onepage, Parallax, HTML5, Bootstrap, Popular, custom, personal, portfolio" /> 
+	<meta name="description" content="Yep">
+	<meta name="keywords" content="Instructor, Driving ,Creative, Onepage, Parallax, HTML5, Bootstrap, Popular, custom, personal, portfolio" /> 
 	<meta name="author" content=""> 
 	<title>Zeferino</title> 
-	<link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/prettyPhoto.css" rel="stylesheet"> 
 	<link href="css/font-awesome.min.css" rel="stylesheet"> 
 	<link href="css/animate.css" rel="stylesheet"> 
@@ -21,6 +21,13 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png"> 
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png"> 
 	<link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+	<script type="text/javascript" src="js/jquery.js"></script> 
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/smoothscroll.js"></script> 
+	<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
+	<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
+	<script type="text/javascript" src="js/jquery.parallax.js"></script> 
+	<script type="text/javascript" src="js/main.js"></script> 
 </head><!--/head-->
 <body>
 	<div class="preloader">
@@ -150,7 +157,7 @@
 			</div>
 		</section><!--/#service-->
 		
-		<section id="contact">
+						<section id="contact">
 							<div class="container">
 								<div class="row text-center clearfix">
 									<div class="col-sm-8 col-sm-offset-2">
@@ -166,7 +173,7 @@
 									<div class="pattern"></div>
 									<div class="row text-center clearfix">
 										<div class="col-sm-6">
-											<div class="contact-address"><address><p><span>Zeferino </span>Magadan</p><strong>310-500-5350<br><br>Driving Instructor</strong><br><small></small></address>
+											<div class="contact-address"><address><p><span>Zeferino </span>Magadan</p><strong>323-357-4182<br><br>Driving Instructor</strong><br><small></small></address>
 												<div class="social-icons">
 													<a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a>
 													<a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
@@ -177,8 +184,9 @@
 
 										<div class="col-sm-6"> 
 											<div id="contact-form-section">
-												<form action="https://formspree.io/jayhardway9@gmail.com" method="POST">
-													<div class="form-group">
+												<div class="status alert alert-success" style="display: none"></div>
+												<form id="contact-form" class="contact" name="contact-form" method="post" action="https://formspree.io/jayhardway9@gmail.com">
+      													<div class="form-group">
 														<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name"></div>
 														<div class="form-group">
 															<input type="email" name="_replyto" class="form-control mail-field" required="required" placeholder="Your Email">
@@ -187,7 +195,7 @@
 															<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>
 														</div> 
 														<div class="form-group">
-															<input type="submit" class="btn btn-primary"></button>
+															<button type="submit" value="Send" class="btn btn-primary">Send</button>
 														</div>
 													</form> 
 												</div>
@@ -198,12 +206,6 @@
 							</section> <!--/#contact--> 
 					
 
-	<script type="text/javascript" src="js/jquery.js"></script> 
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/smoothscroll.js"></script> 
-	<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
-	<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
-	<script type="text/javascript" src="js/jquery.parallax.js"></script> 
-	<script type="text/javascript" src="js/main.js"></script> 
+	
 </body>
 </html>
