--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
 						<li class="scroll active"><a href="#navigation">Home</a></li> 
-						<li class="scroll"><a href="#about-us">About Me</a></li> 
+						<li class="scroll"><a href="#about-me">About Me</a></li> 
 						<li class="scroll"><a href="#services">Services</a></li> 
 					</ul> 
 				</div> 
@@ -97,7 +97,7 @@
 
 </section><!--/#home-->
 
-<section id="about-us">
+<section id="about-me">
 	<div class="container">
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
@@ -105,7 +105,7 @@
 				<p>Hello, my name is Zeferino I am a driving instructor; I have over 6 years of experience and specialize in teaching students how to drive. No matter the age I believe everyone has an equal chance at succeeding; and with my expertise expect to pass the exam on the first try!</p>
 			</div>
 		</div>
-		<div class="about-us">
+		<div class="about-me">
 			<div class="row">
 				<div class="col-sm-6">
 
