changed slide titles

--- a/public/index.html
+++ b/public/index.html
@@ -84,8 +84,8 @@
 			<div class="item" style="background-image: url(images/slider/slide1.jpg)"> 
 				<div class="carousel-caption"> 
 					<div> 
-						<h2 class="heading animated bounceInRight">Nothing Yet</h2> 
-						<p class="animated bounceInLeft"></p> 
+						<h2 class="heading animated bounceInRight">Cost</h2> 
+						<p class="animated bounceInLeft">Ditto</p> 
 					</div> 
 				</div> 
 			</div>
