changed form address

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Yep">
 	<meta name="keywords" content="Instructor, Driving ,Creative, Onepage, Parallax, HTML5, Bootstrap, Popular, custom, personal, portfolio" /> 
 	<meta name="author" content=""> 
-	<title>Zeferino</title> 
+	<title>Jeffry</title> 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/prettyPhoto.css" rel="stylesheet"> 
 	<link href="css/font-awesome.min.css" rel="stylesheet"> 
@@ -44,7 +44,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
 						<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 					</button> 
-					<a class="navbar-brand" href="index.html"><h1><strong>Zeferino</strong></h1></a> 
+					<a class="navbar-brand" href="index.html"><h1><strong>Jeffry</strong></h1></a> 
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
@@ -69,7 +69,7 @@
 				<div class="item active" style="background-image: url(images/slider/slide3.jpg)"> 
 					<div class="carousel-caption"> 
 						<div> 
-							<h2 class="heading animated bounceInDown">'Zeferino'</h2> 
+							<h2 class="heading animated bounceInDown">'Jeffry'</h2> 
 							<p class="animated bounceInUp">A different way at apporaching success</p> 
 						</div> 
 					</div> 
@@ -102,7 +102,7 @@
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
 				<h2 class="title-one">About Me</h2>
-				<p>Hello, my name is Zeferino I am a driving instructor; I have over 6 years of experience and specialize in teaching students how to drive. No matter the age I believe everyone has an equal chance at succeeding; and with my expertise expect to pass the exam on the first try!</p>
+				<p>Hello, my name is Jeffry I am a driving instructor; I have over 6 years of experience and specialize in teaching students how to drive. No matter the age I believe everyone has an equal chance at succeeding; and with my expertise expect to pass the exam on the first try!</p>
 			</div>
 		</div>
 		<div class="about-me">
@@ -157,7 +157,7 @@
 									<div class="col-sm-8 col-sm-offset-2">
 										<div class="contact-heading">
 											<h2 class="title-one">Contact Me</h2>
-											<p>For any of my services feel free to get in touch with me</p>
+											<p>For any of my services or rates feel free to get in touch with me</p>
 										</div>
 									</div>
 								</div>
@@ -167,11 +167,9 @@
 									<div class="pattern"></div>
 									<div class="row text-center clearfix">
 										<div class="col-sm-6">
-											<div class="contact-address"><address><p><span>Zeferino </span>Magadan</p><strong>323-357-4182<br><br>Driving Instructor</strong><br><small></small></address>
+											<div class="contact-address"><address><p><span>Jeffry</span>Magadan</p><strong>323-357-4182<br><br>Driving Instructor</strong><br><small></small></address>
 												<div class="social-icons">
-													<a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a>
-													<a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
-													<a href="#"><i class="fa fa-linkedin"></i></a>
+													<a href="jeffrymagadan@gmail.com"><i class="fa fa-google-plus"></i></a>
 												</div>
 											</div>
 										</div>
@@ -179,7 +177,7 @@
 										<div class="col-sm-6"> 
 											<div id="contact-form-section">
 												<div class="status alert alert-success" style="display: none"></div>
-												<form id="contact-form" class="contact" name="contact-form" method="post" action="https://formspree.io/jayhardway9@gmail.com">
+												<form id="contact-form" class="contact" name="contact-form" method="post" action="https://formspree.io/jeffrymagadan@gmail.com">
       													<div class="form-group">
 														<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name"></div>
 														<div class="form-group">
@@ -197,9 +195,6 @@
 										</div>
 									</div>
 								</div> 
-							</section> <!--/#contact--> 
-					
-
-	
-</body>
-</html>
+							</section> <!--/#contact--> 	
+						</body>
+						</html>
