--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 					<ul class="nav navbar-nav navbar-right"> 
 						<li class="scroll active"><a href="#navigation">Home</a></li> 
 						<li class="scroll"><a href="#about-me">About Me</a></li> 
-						<li class="scroll"><a href="#services">Services</a></li> 
+						<li class="scroll"><a href="#services">Contact Me</a></li> 
 					</ul> 
 				</div> 
 			</div> 
@@ -116,7 +116,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
-					<h2 class="title-one">Services</h2>
+					<h2 class="title-one">Contact Me</h2>
 					<p></p>
 				</div>
 			</div>
@@ -156,7 +156,7 @@
 								<div class="row text-center clearfix">
 									<div class="col-sm-8 col-sm-offset-2">
 										<div class="contact-heading">
-											<h2 class="title-one">Contact Me</h2>
+											<h2 class="title-one">Services</h2>
 											<p>For any of my services or rates feel free to get in touch with me</p>
 										</div>
 									</div>
